gccida/c0/global_alloc
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/global_alloc/src/global.c:834:29: error: use of undeclared identifier 'global_alloc_eliminables'
eliminable_regset |= 1LL << global_alloc_eliminables[i].from; 
                            ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/global_alloc/src/global.c:835:22: error: subscripted value is not an array, pointer, or vector
if ( *(int *)0x8023B4[2 * i] == 7 && frame_pointer_needed || *(int *)0x8023B4[2 * i] == 7 && v16 ) 
             ~~~~~~~~^~~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/global_alloc/src/global.c:835:78: error: subscripted value is not an array, pointer, or vector
if ( *(int *)0x8023B4[2 * i] == 7 && frame_pointer_needed || *(int *)0x8023B4[2 * i] == 7 && v16 ) 
                                                                     ~~~~~~~~^~~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/global_alloc/src/global.c:836:32: error: use of undeclared identifier 'global_alloc_eliminables'
no_global_alloc_regs |= 1LL << global_alloc_eliminables[i].from; 
                               ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/global_alloc/src/global.c:890:1: error: use of undeclared identifier 'allocno_0'; did you mean 'allocno'?
allocno_0 = (  struct allocno *)xcalloc( max_allocno, 0x40uLL); 
^~~~~~~~~
allocno
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/global_alloc/src/global.c:135:24: note: 'allocno' declared here
static struct allocno *allocno;
                       ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/global_alloc/src/global.c:896:1: error: use of undeclared identifier 'allocno_0'; did you mean 'allocno'?
allocno_0[( __int64)num].reg = ie; 
^~~~~~~~~
allocno
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/global_alloc/src/global.c:135:24: note: 'allocno' declared here
static struct allocno *allocno;
                       ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/global_alloc/src/global.c:903:1: error: use of undeclared identifier 'allocno_0'; did you mean 'allocno'?
allocno_0[( __int64)num].size = ( v3 
^~~~~~~~~
allocno
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/global_alloc/src/global.c:135:24: note: 'allocno' declared here
static struct allocno *allocno;
                       ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/global_alloc/src/global.c:907:1: error: use of undeclared identifier 'allocno_0'; did you mean 'allocno'?
allocno_0[( __int64)num].calls_crossed += *( _DWORD *)( reg_n_info->data.l[ie] + 32); 
^~~~~~~~~
allocno
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/global_alloc/src/global.c:135:24: note: 'allocno' declared here
static struct allocno *allocno;
                       ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/global_alloc/src/global.c:908:1: error: use of undeclared identifier 'allocno_0'; did you mean 'allocno'?
allocno_0[( __int64)num].n_refs += *( _DWORD *)( reg_n_info->data.l[ie] + 16); 
^~~~~~~~~
allocno
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/global_alloc/src/global.c:135:24: note: 'allocno' declared here
static struct allocno *allocno;
                       ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/global_alloc/src/global.c:909:1: error: use of undeclared identifier 'allocno_0'; did you mean 'allocno'?
allocno_0[( __int64)num].freq += *( _DWORD *)( reg_n_info->data.l[ie] + 20); 
^~~~~~~~~
allocno
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/global_alloc/src/global.c:135:24: note: 'allocno' declared here
static struct allocno *allocno;
                       ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/global_alloc/src/global.c:910:6: error: use of undeclared identifier 'allocno_0'; did you mean 'allocno'?
if ( allocno_0[( __int64)num].live_length < *( _DWORD *)( reg_n_info->data.l[ie] + 28) ) 
     ^~~~~~~~~
     allocno
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/global_alloc/src/global.c:135:24: note: 'allocno' declared here
static struct allocno *allocno;
                       ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/global_alloc/src/global.c:911:1: error: use of undeclared identifier 'allocno_0'; did you mean 'allocno'?
allocno_0[( __int64)num].live_length = *( _DWORD *)( reg_n_info->data.l[ie] + 28); 
^~~~~~~~~
allocno
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/global_alloc/src/global.c:135:24: note: 'allocno' declared here
static struct allocno *allocno;
                       ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/global_alloc/src/global.c:960:6: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( mode_class_0[( unsigned __int8)BYTE2( *( _DWORD *)cfun->emit->x_regno_reg_rtx[ig])] != MODE_COMPLEX_INT ) 
     ^~~~~~~~~~~~
     mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/global_alloc/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/global_alloc/src/global.c:961:7: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v15 = mode_class_0[( unsigned __int8)BYTE2( *( _DWORD *)cfun->emit->x_regno_reg_rtx[ig])] == MODE_COMPLEX_FLOAT; 
      ^~~~~~~~~~~~
      mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/global_alloc/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/global_alloc/src/global.c:992:1: error: use of undeclared identifier 'allocno_0'; did you mean 'allocno'?
allocno_0[ii].hard_reg_conflicts &= ~eliminable_regset; 
^~~~~~~~~
allocno
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/global_alloc/src/global.c:135:24: note: 'allocno' declared here
static struct allocno *allocno;
                       ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/global_alloc/src/global.c:993:1: error: use of undeclared identifier 'allocno_0'; did you mean 'allocno'?
allocno_0[ii].hard_reg_copy_preferences &= ~eliminable_regset; 
^~~~~~~~~
allocno
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/global_alloc/src/global.c:135:24: note: 'allocno' declared here
static struct allocno *allocno;
                       ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/global_alloc/src/global.c:994:1: error: use of undeclared identifier 'allocno_0'; did you mean 'allocno'?
allocno_0[ii].hard_reg_preferences &= ~eliminable_regset; 
^~~~~~~~~
allocno
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/global_alloc/src/global.c:135:24: note: 'allocno' declared here
static struct allocno *allocno;
                       ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/global_alloc/src/global.c:1002:7: error: use of undeclared identifier 'allocno_0'; did you mean 'allocno'?
if ( !allocno_0[ik].size ) 
      ^~~~~~~~~
      allocno
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/global_alloc/src/global.c:135:24: note: 'allocno' declared here
static struct allocno *allocno;
                       ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/global_alloc/src/global.c:1003:1: error: use of undeclared identifier 'allocno_0'; did you mean 'allocno'?
allocno_0[ik].size = 1; 
^~~~~~~~~
allocno
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/global_alloc/src/global.c:135:24: note: 'allocno' declared here
static struct allocno *allocno;
                       ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/global_alloc/src/obj/global.o] Error 1
